--- a/Day3_Regex_作業.ipynb
+++ b/Day3_Regex_作業.ipynb
@@ -43,7 +43,18 @@
     "04, 22203585\n",
     "06, 2991111\n",
     "07, 7995678\n",
-    "```"
+    "```\n",
+    "\n",
+    "Answer:\n",
+    "    \n",
+    "```    \n",
+    "(\\d+)\n",
+    "\n",
+    "02, 27208889\n",
+    "04, 2220, 3585\n",
+    "06, 2991111\n",
+    "07, 799, 5678\n",
+    "```\n"
    ]
   },
   {
