--- a/Day5_斷詞作業.ipynb
+++ b/Day5_斷詞作業.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +87,14 @@
     "        V.append({})\n",
     "        newpath = {}\n",
     "        for current_state in states:\n",
-    "            print([(V[t-1][pre_state]*trans_p[pre_state][current_state]* emit_p[current_state][obs[t]], pre_state) for pre_state in states])\n",
-    "            (prob, state) = max([(V[t-1][pre_state]*trans_p[pre_state][current_state]* emit_p[current_state][obs[t]], pre_state) for pre_state in states])\n",
-    "            print(\"prob:{}, state:{}\".format(prob, state))\n",
+    "            prob_state_tuple = [(V[t-1][pre_state]*trans_p[pre_state][current_state]* emit_p[current_state][obs[t]], pre_state) for pre_state in states]\n",
+    "            print(f\"prob_state_tuple: {prob_state_tuple}\")\n",
+    "            \n",
+    "            (prob, state) = max(prob_state_tuple)\n",
+    "            print(f\"max prob:{prob}, state:{state}\")\n",
+    "            \n",
     "            V[t][current_state] = prob    \n",
     "            newpath[current_state] = path[state] + [current_state]\n",
-    "#             (prob, state) = max([(V[t-1][pre_state] * trans_p[pre_state][cur_state] * emit_p[cur_state][obs[t]], pre_state) for pre_state in states])\n",
-    "#             V[t][cur_state] = prob\n",
-    "#             newpath[cur_state] = path[state] + [cur_state]\n",
     "                                \n",
     "        # Don't need to remember the old paths\n",
     "        path = newpath\n",
