--- a/Day27-實作樹型模型_作業.ipynb
+++ b/Day27-實作樹型模型_作業.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,23 +156,60 @@
     "    probabilities = counts / counts.sum()\n",
     "    \n",
     "    #計算gini impurity\n",
-    "    gini = 1 - sum(np.square(probabilities))\n",
+    "#     print(1 - sum(np.square(probabilities)))\n",
+    "    gini = 1 - sum(probabilities**2)\n",
     "    \n",
     "    return gini"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.5714285714285714\n",
+      "0.31999999999999984\n",
+      "0.4444444444444444\n",
+      "0.0\n",
+      "0.4444444444444444\n",
+      "0.0\n",
+      "0.653061224489796\n",
+      "0.0\n",
+      "0.6666666666666667\n",
+      "0.0\n",
+      "0.5\n",
+      "0.5\n",
+      "0.5\n",
+      "0.5714285714285714\n",
+      "0.0\n",
+      "0.625\n",
+      "1\n",
+      "0.0\n",
+      "0.4444444444444444\n",
+      "0.0\n",
+      "0.4444444444444444\n",
+      "0.0\n",
+      "0.0\n",
+      "0.5\n",
+      "0.5\n",
+      "0.4444444444444444\n",
+      "0.0\n",
+      "0.5\n",
+      "1\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'diameter <= 1.2': ['Grape', {'color = Yellow': ['Lemon', 'Apple']}]}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +234,7 @@
        "'Lemon'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +259,7 @@
        "Name: 8, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,15 +302,16 @@
     "        self.max_depth = max_depth\n",
     "        self.metric_function = metric_function\n",
     "        self.n_features = n_features\n",
-    "    \n",
+    "\n",
     "    def bootstrapping(self, train_df, n_bootstrap):\n",
     "        #sample data to be used to train individual tree\n",
-    "        indices = list(train_df.index)\n",
-    "        train_indices = random.sample(population=indices, k=n_bootstrap)\n",
-    "        train_df = df.loc(train_indices)\n",
+    "        bootstrap_indices = np.random.randint(low=0, high=len(train_df), size=n_bootstrap)\n",
+    "        df_bootstrapped = train_df.iloc[bootstrap_indices]\n",
     "        \n",
     "        #avoid pick the samples with all the same label\n",
-    "        df.drop_duplicates(subset=['label'])\n",
+    "        while len(df_bootstrapped['label'].unique()) == 1:\n",
+    "            bootstrap_indices = np.random.randint(low=0, high=len(train_df), size=n_bootstrap)\n",
+    "            df_bootstrapped = train_df.iloc[bootstrap_indices]\n",
     "        \n",
     "        return df_bootstrapped\n",
     "    \n",
@@ -281,63 +319,131 @@
     "        \n",
     "        self.forest = []\n",
     "        \n",
-    "        ###<your code>###\n",
+    "        for i in range(self.n_trees):\n",
+    "            df_bootstrapped = self.bootstrapping(train_df, self.n_bootstrap)\n",
+    "            tree = decision_tree(self.metric_function, self.task_type,\n",
+    "                                 0, self.min_samples, self.max_depth,\n",
+    "                                 self.n_features)\n",
+    "            \n",
+    "            tree.fit(df_bootstrapped)\n",
+    "            self.forest.append(tree)\n",
+    "            \n",
     "            \n",
     "        return self.forest\n",
     "    \n",
     "    def pred(self, test_df):\n",
     "        df_predictions = {}\n",
     "        \n",
-    "        ###<your code>###\n",
+    "        for i in range(len(self.forest)):\n",
+    "            # get prediction of every trees\n",
+    "#             col_name = f\"{i}\"\n",
+    "            predictions = list(test_df.apply(self.forest[i].pred, args=(self.forest[i].sub_tree,), axis=1))\n",
+    "            df_predictions[i] = predictions\n",
     "            \n",
     "        df_predictions = pd.DataFrame(df_predictions)\n",
     "        \n",
     "        #majority voting\n",
-    "        ###<your code>###\n",
+    "        random_forest_predictions = df_predictions.mode(axis=1)[0]\n",
     "        \n",
     "        return random_forest_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'random_forest' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-fead9b2bc415>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#建立隨機森林模型\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mforest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom_forest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_bootstrap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_tree\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtask_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'classification'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_samples\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_depth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetric_function\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcalculate_entropy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mforest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'random_forest' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type(train_indices): <class 'list'>, train_indices: [9, 0, 1]\n",
+      "type(bootstrap_indices): <class 'numpy.ndarray'>, bootstrap_indices: [5 6 5]\n",
+      "0.5\n",
+      "0.0\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.5\n",
+      "0.0\n",
+      "0.6666666666666667\n",
+      "1\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.5\n",
+      "1\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.4444444444444444\n",
+      "1\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.0\n",
+      "0.5\n",
+      "0.0\n",
+      "0.4444444444444444\n",
+      "1\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<decision_tree_functions.decision_tree at 0x11948ffd0>,\n",
+       " <decision_tree_functions.decision_tree at 0x1194c36a0>,\n",
+       " <decision_tree_functions.decision_tree at 0x11948f358>]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import random\n",
+    "n_bootstrap = 3\n",
     "train_df, test_df = train_test_split(df, 0.2)\n",
     "\n",
-    "#建立隨機森林模型\n",
-    "forest = random_forest(n_bootstrap=3, n_tree=3, task_type='classification', min_samples=2, max_depth=5, metric_function=calculate_entropy, n_features=3)\n",
     "\n",
+    "indices = list(train_df.index)\n",
+    "train_indices = random.sample(population=indices, k=n_bootstrap)\n",
+    "print(f\"type(train_indices): {type(train_indices)}, train_indices: {train_indices}\")\n",
+    "\n",
+    "bootstrap_indices = np.random.randint(low=0, high=len(train_df), size=n_bootstrap)\n",
+    "print(f\"type(bootstrap_indices): {type(bootstrap_indices)}, bootstrap_indices: {bootstrap_indices}\")\n",
+    "\n",
+    "#建立隨機森林模型\n",
+    "forest = random_forest(n_bootstrap=3, n_trees=3, task_type='classification', min_samples=2, max_depth=5, metric_function=calculate_gini, n_features=3)\n",
     "forest.fit(train_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    Lemon\n",
-       "1    Grape\n",
+       "0    Grape\n",
+       "1    Apple\n",
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -379,16 +485,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Yellow</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Lemon</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Red</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Grape</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Red</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>Grape</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>Lemon</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -396,11 +502,11 @@
       ],
       "text/plain": [
        "    color  diameter  label\n",
-       "8  Yellow       3.0  Lemon\n",
-       "9     Red       1.2  Grape"
+       "3     Red       1.0  Grape\n",
+       "4  Yellow       3.3  Lemon"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
