--- a/Day28-實作TreeBase模型_作業.ipynb
+++ b/Day28-實作TreeBase模型_作業.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -127,53 +127,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "#preprocessing data\n",
     "#remove email address, punctuations, and change line symbol(\\n)\n",
     "\n",
-    "###<your code>###"
+    "pattern = r\"\\S*@\\S*|\\\\n|[^a-zA-Z0-9 ]\"\n",
+    "\n",
+    "for i, review in enumerate(corpus):\n",
+    "    fil_review = [w for w in re.sub(pattern, \" \", review).split(\" \") if w != \"\"]\n",
+    "    corpus[i] = \" \".join(fil_review)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7996, 1999, 7996, 1999)"
+       "(4211, 1053, 4211, 1053)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#split corpus and label into train and test\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=2, shuffle=True)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(corpus, labels, test_size=0.2, random_state=2, shuffle=True)\n",
     "\n",
     "len(x_train), len(x_test), len(y_train), len(y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#change corpus into vector\n",
     "#you can use tfidf or BoW here\n",
     "\n",
-    "###<your code>###\n",
+    "tfidf_vec = TfidfVectorizer()\n",
+    "tfidf_vec.fit(x_train)\n",
     "\n",
     "#transform training and testing corpus into vector form\n",
-    "x_train = ###<your code>###\n",
-    "x_test = ###<your code>###"
+    "x_train = tfidf_vec.transform(x_train).toarray()\n",
+    "x_test = tfidf_vec.transform(x_test).toarray()"
    ]
   },
   {
@@ -185,16 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeClassifier(max_depth=6)"
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=6,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,40 +213,56 @@
     "#build classification model (decision tree, random forest, or adaboost)\n",
     "#start training\n",
     "\n",
-    "###<your code>###"
+    "tree = DecisionTreeClassifier(max_depth=6, min_samples_split=2)\n",
+    "tree.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#start inference\n",
-    "y_pred = ###<your code>###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9054527263631816\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([5., 5., 4., ..., 5., 5., 5.])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#start inference\n",
+    "y_pred = tree.predict(x_test)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9012345679012346"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#calculate accuracy\n",
-    "###<your code>###"
+    "tree.score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -245,17 +271,21 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.71      0.22      0.33       134\n",
-      "           2       0.00      0.00      0.00        73\n",
-      "           3       0.91      0.99      0.95      1792\n",
+      "         1.0       1.00      0.42      0.59        19\n",
+      "         2.0       0.75      0.17      0.27        18\n",
+      "         3.0       0.83      0.20      0.32        25\n",
+      "         4.0       0.69      0.16      0.27        67\n",
+      "         5.0       0.90      1.00      0.95       924\n",
       "\n",
-      "    accuracy                           0.91      1999\n",
-      "   macro avg       0.54      0.40      0.43      1999\n",
-      "weighted avg       0.87      0.91      0.88      1999\n",
+      "   micro avg       0.90      0.90      0.90      1053\n",
+      "   macro avg       0.84      0.39      0.48      1053\n",
+      "weighted avg       0.89      0.90      0.87      1053\n",
       "\n",
-      "[[  29    4  101]\n",
-      " [   3    0   70]\n",
-      " [   9    2 1781]]\n"
+      "[[  8   0   1   0  10]\n",
+      " [  0   3   0   0  15]\n",
+      " [  0   1   5   3  16]\n",
+      " [  0   0   0  11  56]\n",
+      " [  0   0   0   2 922]]\n"
      ]
     }
    ],
