--- a/final1_進階篇_hw.ipynb
+++ b/final1_進階篇_hw.ipynb
@@ -285,8 +285,13 @@
     "        interpolation_lambda = 0.99\n",
     "        proba_dicts = [ngram.get_proba_dict(prefix) for ngram in ngrams[:len(prefix)+1]]\n",
     "\n",
-    "        probas = self._get_interpolation_proba(prefix, proba_dicts, interpolation_lambda)\n",
-    "        sorted_probas = sorted(probas)\n",
+    "        words = proba_dicts[0].keys()\n",
+    "        for word in words:\n",
+    "            proba = self._get_interpolation_proba(word, proba_dicts, interpolation_lambda)\n",
+    "            probas.append((proba, word))\n",
+    "\n",
+    "        sorted_probas = sorted(probas, reverse=True)\n",
+    "\n",
     "        # 在此你可以選擇兩種 Smoothing of Language Models 的方法：\n",
     "        # Back-off Smoothing 或 Interpolation Smoothing\n",
     "        # 如果你選擇 Interpolation Smoothing，你可以運用已經準備好的輔助函式\n",
