--- a/final2_分類器：PPMI＋SVD_hw.ipynb
+++ b/final2_分類器：PPMI＋SVD_hw.ipynb
@@ -254,9 +254,17 @@
     "co_matrix = np.zeros(shape=(vocab_size, vocab_size), dtype=np.int32)\n",
     "\n",
     "window_size = 1\n",
-    "# YOUR CODE HERE\n",
+    "for pairs in train_title_cuts.values():\n",
+    "    words, _ = list(zip(*pairs))\n",
+    "    for idx, word in enumerate(words):\n",
+    "        left_idx = idx - window_size if idx - window_size >= 0 else 0\n",
+    "        left_words = words[left_idx:idx]\n",
     "\n",
-    "# END YOUR CODE"
+    "        word_id = word2index[word]\n",
+    "        for left_word in left_words:\n",
+    "            left_id = word2index[left_word]\n",
+    "            co_matrix[word_id, left_id] += 1\n",
+    "            co_matrix[left_id, word_id] += 1"
    ]
   },
   {
@@ -318,9 +326,17 @@
     "# 建立PPMI\n",
     "\n",
     "def get_ppmi(co_matrix: np.ndarray, eps: float=1e-8):\n",
-    "    # YOUR CODE HERE\n",
+    "    M = np.zeros_like(co_matrix, dtype=np.float32)\n",
+    "    N = np.sum(co_matrix)\n",
+    "    S = np.sum(co_matrix, axis=0)\n",
+    "    total = co_matrix.shape[0]*co_matrix.shape[1]\n",
     "\n",
-    "    # END YOUR CODE\n",
+    "    cnt = 0\n",
+    "    \n",
+    "    for i in tqdm(range(co_matrix.shape[0])):\n",
+    "        for j in range(co_matrix.shape[1]):\n",
+    "            pmi = np.log2(co_matrix[i, j]*N / (S[i]*S[j] + eps))\n",
+    "            M[i, j] = max(0, pmi)\n",
     "    return M\n",
     "\n",
     "ppmi = get_ppmi(co_matrix)"
@@ -369,9 +385,8 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "# 使用`TruncatedSVD`進行降維，降維到dim=1000\n",
-    "# YOUR CODE HERE\n",
-    "\n",
-    "# END YOUR CODE"
+    "svd = TruncatedSVD(n_components=1000, n_iter=10)\n",
+    "word_vectors = svd.fit_transform(ppmi)"
    ]
   },
   {
